--- a/src/Makefile.osx
+++ b/src/Makefile.osx
@@ -40,7 +40,7 @@ NO_STDERR	= 2> /dev/null
 TARGET 	    = AntTweakBar
 
 # source files without extension:
-SRC_FILES	= TwColors.cpp TwFonts.cpp TwOpenGL.cpp TwOpenGLCore.cpp TwBar.cpp TwMgr.cpp LoadOGL.cpp LoadOGLCore.cpp TwEventGLFW.c TwEventGLUT.c TwEventSDL.c TwEventSDL12.c TwEventSDL13.c TwEventSFML.cpp
+SRC_FILES	= TwColors.cpp TwFonts.cpp TwOpenGL.cpp TwOpenGLCore.cpp TwBar.cpp TwMgr.cpp LoadOGL.cpp LoadOGLCore.cpp TwEventGLFW.c TwEventGLFW3.c TwEventGLUT.c TwEventSDL.c TwEventSDL12.c TwEventSDL13.c TwEventSFML.cpp
 
 # build object list from source files
 OBJS_1 		= $(SRC_FILES:.c=.o)
@@ -91,6 +91,7 @@ TwMgr.o:       TwPrecomp.h ../include/AntTweakBar.h TwMgr.h TwColors.h TwFonts.h
 TwPrecomp.o:   TwPrecomp.h
 LoadOGL.o:     TwPrecomp.h LoadOGL.h
 TwEventGLFW.o: ../include/AntTweakBar.h MiniGLFW.h
+TwEventGLFW3.o: ../include/AntTweakBar.h MiniGLFW3.h
 TwEventGLUT.o: ../include/AntTweakBar.h MiniGLUT.h
 TwEventSDL.o:  ../include/AntTweakBar.h
 TwEventSDL12.o:  ../include/AntTweakBar.h MiniSDL12.h
