--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,12 @@ cmake_minimum_required(VERSION 3.6)
 
 project(AntTweakBar)
 
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/scripts)
+
+include(D3DShader)
+include(Functions)
+
 add_subdirectory(Renderer)
-# add_subdirectory(TweakBar)
+add_subdirectory(TweakBar)
 # add_subdirectory(Examples)
 
