Build SDL, GLUT and D3D examples

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,5 @@ include(Functions)
 
 add_subdirectory(Renderer)
 add_subdirectory(TweakBar)
-# add_subdirectory(Examples)
+add_subdirectory(Examples)
 
