--- a/TweakBar/CMakeLists.txt
+++ b/TweakBar/CMakeLists.txt
@@ -91,6 +91,9 @@ set(defs TW_EXPORTS)
 
 if (NOT BUILD_SHARED_LIBS)
 	list(APPEND defs TW_STATIC)
+elseif (WIN32 AND CMAKE_SIZEOF_VOID_P EQUAL 8)
+	set_target_properties(${PROJECT_NAME}
+		PROPERTIES OUTPUT_NAME "${PROJECT_NAME}64")
 endif()
 
 if (UNIX AND NOT APPLE)
