Make legacy OpenGL an optional dependency

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -36,7 +36,6 @@ endif(ATB_EVENT_HANDLER_WINDOWS)
 # OpenGL Examples
 ###############################################################################
 
-
 function(add_ogl_example main libprefix)
 
 	get_filename_component(target "${main}" NAME_WE)
@@ -46,6 +45,22 @@ function(add_ogl_example main libprefix)
 			${${libprefix}_LIBRARY} ${${libprefix}_LIBRARIES})
 	target_include_directories(${target} PRIVATE
 			${${libprefix}_INCLUDE_DIR} ${${libprefix}_INCLUDE_DIRS})
+
+endfunction()
+
+find_package(OpenGL)
+
+function(add_legacy_ogl_example main libprefix)
+
+	if (OPENGL_FOUND)
+		return()
+	endif()
+
+	add_ogl_example(${amin} ${libprefix})
+
+	get_filename_component(target "${main}" NAME_WE)
+	target_link_libraries(${target} PRIVATE ${OPENGL_LIBRARIES})
+	target_include_directories(${target} PRIVATE ${OPENGL_INCLUDE_DIRS})
 
 endfunction()
 
@@ -59,11 +74,11 @@ macro(sdl1_examples_try_version version)
 	if (SDL_FOUND)
 
 		if (ATB_GUIRENDERER_USE_LEGACY_GL)
-			add_ogl_example(TwSimpleSDL.c SDL)
+			add_legacy_ogl_example(TwSimpleSDL.c SDL)
 		endif()
 
 		if (ATB_GUIRENDERER_USE_CORE_GL)
-			add_ogl_example(TwGLCoreSDL.c SDL)
+			add_legacy_ogl_example(TwGLCoreSDL.c SDL)
 		endif()
 
 	endif()
@@ -83,17 +98,10 @@ endif()
 
 if (ATB_EVENT_HANDLER_SDL20)
 
-	set(SDL2_CONFIG_DIR "" CACHE PATH
-			"SDL2 CMake Configuration Directory")
+	find_package(SDL2 CONFIG)
 
-	if (SDL2_CONFIG_DIR)
-
-		find_package(sdl2 NO_MODULE REQUIRED HINT ${SDL2_CONFIG_DIR})
-
-		if (SDL2_LIBRARIES)
-			add_ogl_example(TwGLCoreSDL2.c SDL2)
-		endif()
-
+	if (SDL2_FOUND)
+		add_ogl_example(TwGLCoreSDL2 SDL2)
 	endif()
 
 endif()
@@ -106,11 +114,9 @@ if (ATB_GUIRENDERER_USE_LEGACY_GL AND ATB_EVENT_HANDLER_GLUT)
 	find_package(GLUT)
 
 	if (GLUT_FOUND)
-
-		add_ogl_example(TwSimpleGLUT.c GLUT)
-		add_ogl_example(TwDualGLUT.c GLUT)
-		add_ogl_example(TwString.cpp GLUT)
-
+		add_legacy_ogl_example(TwSimpleGLUT.c GLUT)
+		add_legacy_ogl_example(TwDualGLUT.c GLUT)
+		add_legacy_ogl_example(TwString.cpp GLUT)
 	endif()
 
 endif()
