Introduce option for examples build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,16 @@ cmake_minimum_required(VERSION 2.8.11)
 
 project(AntTweakBar)
 
-list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/scripts)
+option(ATB_BUILD_EXAMPLES "Whether to build example programs" OFF)
+
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/scripts")
 
 include(D3DShader)
 include(Functions)
 
 add_subdirectory(Renderer)
 add_subdirectory(TweakBar)
-add_subdirectory(Examples)
+
+if (ATB_BUILD_EXAMPLES)
+	add_subdirectory(Examples)
+endif()
