--- a/TweakBar/CMakeLists.txt
+++ b/TweakBar/CMakeLists.txt
@@ -125,12 +125,8 @@ append_unless(defs	TW_NO_SFML_EVENTS				ATB_EVENT_HANDLER_SFML)
 
 target_compile_definitions(AntTweakBar PRIVATE ${defs})
 
-if (NOT CMAKE_INSTALL_LIBDIR)
-	set(CMAKE_INSTALL_LIBDIR "lib")
-endif()
-
 install(TARGETS AntTweakBar EXPORT AntTweakBarTargets
-		RUNTIME DESTINATION bin
+		RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 		ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
