Disable MSVC auto-linking not needed with CMake

--- a/TweakBar/CMakeLists.txt
+++ b/TweakBar/CMakeLists.txt
@@ -99,7 +99,12 @@ target_include_directories(AntTweakBar
 		compile
 		${CMAKE_CURRENT_BINARY_DIR})
 
-set(defs TW_EXPORTS)
+set(defs PRIVATE TW_EXPORTS)
+
+if (WIN32)
+	# Don't bake library names into client code (no need for that using CMake)
+	set(defs INTERFACE TW_NO_LIB_PRAGMA ${defs})
+endif()
 
 if (NOT BUILD_SHARED_LIBS)
 	list(APPEND defs TW_STATIC)
@@ -123,7 +128,7 @@ append_unless(defs	TW_NO_SDL13_EVENTS				ATB_EVENT_HANDLER_SDL13)
 append_unless(defs	TW_NO_SDL20_EVENTS				ATB_EVENT_HANDLER_SDL20)
 append_unless(defs	TW_NO_SFML_EVENTS				ATB_EVENT_HANDLER_SFML)
 
-target_compile_definitions(AntTweakBar PRIVATE ${defs})
+target_compile_definitions(AntTweakBar ${defs})
 
 install(TARGETS AntTweakBar EXPORT AntTweakBarTargets
 		RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
