Allow installation of static builds

--- a/Renderer/CMakeLists.txt
+++ b/Renderer/CMakeLists.txt
@@ -75,7 +75,6 @@ add_library(${target} STATIC ${headers} ${sources})
 target_include_directories(${target}
 	PUBLIC
 		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-		$<INSTALL_INTERFACE:include>
 	PRIVATE
 		compile
 		${CMAKE_CURRENT_BINARY_DIR}
@@ -83,7 +82,12 @@ target_include_directories(${target}
 
 if (NOT WIN32)
 	find_package(OpenGL REQUIRED)
-	target_link_libraries(${target} ${OPENGL_LIBRARIES})
+	target_link_libraries(${target} PRIVATE ${OPENGL_LIBRARIES})
+
+elseif (CMAKE_SIZEOF_VOID_P EQUAL 8)
+
+	set_target_properties(${target}
+			PROPERTIES OUTPUT_NAME "${target}64")
 endif()
 
 set(defs "")
@@ -125,4 +129,12 @@ if (ATB_GUIRENDERER_USE_D3D11)
 
 else()
 	ignore_hlsl(${d3d11HlslFile})
+endif()
+
+###############################################################################
+# Installation (required for static builds of the lib)
+
+if (NOT BUILD_SHARED_LIBS)
+	install(TARGETS ${target} EXPORT AntTweakBarTargets
+			ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 endif()
