Resolve issues building as dynamic library
The currently forced static renderer may need to use position
independent code in order to link with the shared library.

Thanks @GalGR for reporting.
Closes #4

--- a/Renderer/CMakeLists.txt
+++ b/Renderer/CMakeLists.txt
@@ -72,6 +72,11 @@ set(sources
 
 add_library(${target} STATIC ${headers} ${sources})
 
+if (BUILD_SHARED_LIBS) # .we want to link this forced static lib into it
+	set_target_properties(${target}
+		PROPERTIES POSITION_INDEPENDENT_CODE ON)
+endif()
+
 target_include_directories(${target}
 	PUBLIC
 		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
